z-index fix?

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ video {
   overflow: hidden;
   transition: opacity 0.3s ease; /* You can adjust the transition property as needed */
   opacity: 0; /* Start with opacity set to 0 */
-  z-index: 999;
+  z-index: 998;
 }
 
 /* Styles for the modal content */
@@ -209,6 +209,7 @@ video {
   color: var(--bg-color);
   background: transparent url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,63,63,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M8 8 L24 24 M8 24 L24 8'/%3E%3C/svg%3E") center/1em auto no-repeat;
   border: 0;
+  z-index: 999;
 
   padding: 0.5rem 0.5rem;
   margin: -0.5rem -0.5rem -0.5rem auto;
